--- a/Romanian/main/Music.apk/res/values-ro/strings.xml
+++ b/Romanian/main/Music.apk/res/values-ro/strings.xml
@@ -22,8 +22,11 @@
     <string name="action_item_share">Distribuiţi</string>
     <string name="action_settings">Setări</string>
     <string name="ad_close">Închideți</string>
+    <string name="ad_data_exception">Excepție date promoții !</string>
     <string name="ad_extension">Promoții</string>
     <string name="ad_mark">Reclame</string>
+    <string name="ad_recommend">Recomandări promoții</string>
+    <string name="ad_setting">Setări serviciu reclame</string>
     <string name="add_music">Adăugaţi melodii</string>
     <string name="add_to_last_of_playlist">Adaugă la sfârșitul listei de redare</string>
     <string name="alaka_required">Ar trebui să plătiți pentru a asculta această melodie</string>
@@ -317,6 +320,34 @@ este oferit în principal de către Ultimate Inc."</string>
     <string name="fragment_title_channel">FM</string>
     <string name="fragment_title_personal">PERSONAL</string>
     <string name="fragment_title_recommend">RECOMANDATE</string>
+    <string name="global_search_app_name">Muzică</string>
+    <string name="global_search_description_entry">Savurați muzică</string>
+    <string name="global_search_description_hot">Actualizări săptămânale</string>
+    <string name="global_search_description_radar">Recunoaștere melodii</string>
+    <string name="global_search_key_absolute">muzică pură; muzică soft</string>
+    <string name="global_search_key_buddha">Muzică budistă</string>
+    <string name="global_search_key_cantonese">listă de redare muzică cantoneză</string>
+    <string name="global_search_key_child">Cântece pentru copii</string>
+    <string name="global_search_key_classics">listă de redare muzică clasică</string>
+    <string name="global_search_key_entry">muzică;melodie;piesă</string>
+    <string name="global_search_key_fm">radio online</string>
+    <string name="global_search_key_hot">melodii populare</string>
+    <string name="global_search_key_internet">listă de redare online</string>
+    <string name="global_search_key_movie">listă de redare coloană sonoră filme</string>
+    <string name="global_search_key_prenatal">muzică prenatală</string>
+    <string name="global_search_key_radar">recunoaștere melodii</string>
+    <string name="global_search_title_absolute">Muzică pură</string>
+    <string name="global_search_title_buddha">Muzică budistă</string>
+    <string name="global_search_title_cantonese">Muzică Cantoneză</string>
+    <string name="global_search_title_child">"Cântecele pentru copii"</string>
+    <string name="global_search_title_classics">Muzică clasică</string>
+    <string name="global_search_title_entry">Muzică</string>
+    <string name="global_search_title_fm">Radio online</string>
+    <string name="global_search_title_hot">Melodii populare</string>
+    <string name="global_search_title_internet">Muzică online</string>
+    <string name="global_search_title_movie">Coloană sonoră filme</string>
+    <string name="global_search_title_prenatal">Muzică prenatală</string>
+    <string name="global_search_title_radar">Recunoaștere melodii</string>
     <string name="group_artist">Trupe</string>
     <string name="handle_later">Nu acum</string>
     <string name="headset_settings">Căști și efecte audio</string>
