--- a/Romanian/main/XMRemoteController.apk/res/values-ro/strings.xml
+++ b/Romanian/main/XMRemoteController.apk/res/values-ro/strings.xml
@@ -566,6 +566,7 @@ vă rog așteptați"</string>
     <string name="passport_access_denied">Acces refuzat</string>
     <string name="passport_account_hint_text">Email sau număr de telefon</string>
     <string name="passport_account_identity_title">Verificați-vă identitatea</string>
+    <string name="passport_account_label">Cont Mi</string>
     <string name="passport_account_name">Cont: %1$s</string>
     <string name="passport_account_not_activated">"Contul nu a fost activat"</string>
     <string name="passport_account_not_actived">"Contul dumneavoastră nu a fost activat"</string>
@@ -573,48 +574,47 @@ vă rog așteptați"</string>
     <string name="passport_activing_account">Activare…</string>
     <string name="passport_area_code_hot">UTILIZAT FRECVENT</string>
     <string name="passport_area_code_title">Codul țării</string>
+    <string name="passport_auto_generate_pwd">Generare parolă sigură</string>
+    <string name="passport_back">Înapoi</string>
     <string name="passport_bad_authentication">Nume de utilizator sau parolă greșite</string>
-    <string name="passport_btn_return">Înapoi</string>
-    <string name="passport_button_cancel">Renunțare</string>
+    <string name="passport_barcode_add_account_prompt">Pentru a conecta un cont, scanați codul QR din nou după ce vă conectați.</string>
     <string name="passport_change_account"><u>Modificați contul</u></string>
     <string name="passport_change_phone_number">Schimbați numărul</string>
     <string name="passport_checking_account">Verificare parolă…</string>
     <string name="passport_checking_input">Verificare date…</string>
-    <string name="passport_choose_which_one_sim">Alegeți un număr de telefon</string>
     <string name="passport_click_email_to_valid">"
 
 Pentru activarea contului, accesați 
 link-ul din e-mailul pe care vi l-am trimis."</string>
     <string name="passport_completed">Finalizat</string>
-    <string name="passport_confirm">Confirmare</string>
     <string name="passport_confirm_recycle_account">Da</string>
+    <string name="passport_copy_message_text_success">Copiat cu succes</string>
+    <string name="passport_copy_message_vcode">Copiați codul</string>
     <string name="passport_delete_account">Ieșire din cont</string>
+    <string name="passport_downlink_reg">Creați un cont utilizând numărul de telefon</string>
     <string name="passport_email">Adresă de e-mail</string>
     <string name="passport_email_or_id_hint_text">Adresă de e-mail sau nume cont Mi</string>
     <string name="passport_email_reg_success_summary">%1$s a fost asociată contului dvs. Mi. O puteți utiliza pentru a vă conecta sau pentru a vă reseta parola.</string>
     <string name="passport_error_device_id">"Nu se poate obține ID-ul telefonului"</string>
     <string name="passport_error_dup_email">Această adresă de e-mail este asociată deja altui cont</string>
-    <string name="passport_error_dup_phone">Acest număr de telefon este asociat deja altui cont</string>
     <string name="passport_error_email">Adresa de e-mail introdusă este incorectă</string>
     <string name="passport_error_empty_captcha_code">Introduceți codul captcha</string>
     <string name="passport_error_empty_email">Introduceți adresa de e-mail</string>
     <string name="passport_error_empty_phone_num">Introduceți numărul de telefon</string>
     <string name="passport_error_empty_pwd">Introduceți parola</string>
-    <string name="passport_error_empty_username">Introduceți numele de utilizator</string>
+    <string name="passport_error_empty_username">Introduceți ID-ul contului</string>
     <string name="passport_error_empty_vcode">Introduceți codul de verificare</string>
     <string name="passport_error_illegal_pwd">Parolă incorectă</string>
     <string name="passport_error_invalid_dev_id">ID dispozitiv incorect</string>
     <string name="passport_error_invalid_phone_num">Număr de telefon incorect</string>
     <string name="passport_error_login">"Nu se poate loga"</string>
     <string name="passport_error_network">"Nu se poate conecta la rețea"</string>
-    <string name="passport_error_no_sms_service">"Nu se poate trimite mesajul text. Rețeaua mobilă este indisponibilă."</string>
     <string name="passport_error_phone_error">Număr de telefon incorect</string>
     <string name="passport_error_server">Eroare de server</string>
     <string name="passport_error_sim_not_ready">"Nu a fost găsită cartela SIM"</string>
     <string name="passport_error_ssl_hand_shake">Eroare de conectare la server. Verificați dacă data afișată de către sistem este cea corectă.</string>
     <string name="passport_error_unknown">"Nu se poate conecta"</string>
     <string name="passport_error_user_name">Nume de utilizator incorect</string>
-    <string name="passport_error_verify_code">Codul introdus este incorect</string>
     <string name="passport_failed_to_send_activate_email">"Nu s-a putut trimite e-mailul de activare"</string>
     <string name="passport_find_password_on_web_msg">Accesați account.mi.com pentru a vă reseta parola.</string>
     <string name="passport_forget_password"><u>Parola uitată</u></string>
@@ -622,6 +622,7 @@ link-ul din e-mailul pe care vi l-am trimis."</string>
     <string name="passport_get_back_pwd">Recuperați parola</string>
     <string name="passport_get_verify_code">Obțineți codul de verificare</string>
     <string name="passport_getting_verify_code">Se obține codul</string>
+    <string name="passport_i_know">Am înțeles</string>
     <string name="passport_identitfication_expired">Codul de verificare a expirat; reluați procesul</string>
     <string name="passport_imei_permission_denied_message">"Vă solicităm permisiunea de a obține IMEI-ul telefonului. Contul Mi utilizează IMEI-ul pentru a identifica telefonul de pe care vă conectați/deconectați, pentru a vă menține contul Mi în siguranță."</string>
     <string name="passport_imei_permission_denied_title">Permisiune de solicitare IMEI</string>
@@ -632,23 +633,22 @@ link-ul din e-mailul pe care vi l-am trimis."</string>
     <string name="passport_input_vcode_hint">Introduceți codul de verificare</string>
     <string name="passport_license_host_unreachable">"Nu se poate conecta la rețea. Puteți vizualiza această pagină la %s."</string>
     <string name="passport_loading">Încărcare…</string>
-    <string name="passport_login">Logați-vă la un cont existent</string>
-    <string name="passport_login_check_find_device">Se verifică starea serviciului Găsire telefon…</string>
-    <string name="passport_login_check_find_device_failed">"Nu s-a putut verifica starea serviciului Găsire telefon. Verificați conexiunea la rețea."</string>
+    <string name="passport_login">Logați-vă</string>
     <string name="passport_login_failed">"Nu se poate loga"</string>
-    <string name="passport_login_find_device_bind">Acest telefon este asociat cu ID-ul Mi (%s). Conectați-vă pentru a activa acest telefon.</string>
     <string name="passport_login_instead_reg">Utilizați acest număr</string>
     <string name="passport_login_instead_reg_with_email">Utilizați această adresă de e-mail</string>
-    <string name="passport_login_notice">Logare…</string>
-    <string name="passport_login_short">Conectați-vă</string>
+    <string name="passport_login_prompt">Un singur cont Mi. Toate serviciile Mi.</string>
     <string name="passport_login_title">Se conectează la contul Mi</string>
-    <string name="passport_login_with_email_or_id"><u>Conectare utilizând adresa de e-mail sau ID-ul contului Mi</u></string>
+    <string name="passport_login_using_other_ways"><u>Alte modalități de conectare</u></string>
+    <string name="passport_message_dialog_title">SMS conținând coduri de verificare</string>
     <string name="passport_next">Următorul</string>
     <string name="passport_notification_title">Eroare de conectare la %1$s</string>
     <string name="passport_password_req_notice">Parola trebuie sa conțină 8-16 caractere, litere și numere(se face diferențiere între litere mici si majuscule).</string>
     <string name="passport_phone_num_hint_text">Număr de telefon</string>
     <string name="passport_prev">Înapoi</string>
     <string name="passport_privacy_policy">Politica de confidențialitate</string>
+    <string name="passport_pwd_generate_failure">"Nu s-a putut genera parola"</string>
+    <string name="passport_pwd_generating">Se generează…</string>
     <string name="passport_quick_login_dialog_step2_title">Verificare în 2 pași</string>
     <string name="passport_quick_login_dialog_title">Verificare parolă</string>
     <string name="passport_quick_login_step2_title">Verificare în 2 pași</string>
@@ -656,15 +656,13 @@ link-ul din e-mailul pe care vi l-am trimis."</string>
     <string name="passport_re_get_verify_code">Obțineți codul din nou</string>
     <string name="passport_re_register">Se reia procedura de creare cont</string>
     <string name="passport_recycle_account_prompt">Acesta este contul dvs. MI?</string>
+    <string name="passport_reg_btn_using_other_phone">Utilizați numărul alternativ de telefon</string>
     <string name="passport_reg_failed">"Nu se poate crea contul"</string>
-    <string name="passport_reg_new">Creați un cont Mi în mod gratuit</string>
-    <string name="passport_reg_sms_send_prompt">Trimiteți codul de verificare la %s</string>
+    <string name="passport_reg_prompt">"Nu aveți un cont Mi? Creați unul în mod gratuit."</string>
     <string name="passport_reg_success">Cont creat</string>
     <string name="passport_reg_success_summary">%1$s a fost asociat contului dumneavoastră. Îl puteți folosi pentru a vă conecta sau pentru a vă reseta parola.</string>
     <string name="passport_reg_type_email">Creați un cont utilizând adresa de e-mail</string>
-    <string name="passport_reg_type_other_ways"><u>Creați un cont utilizând alte metode</u></string>
-    <string name="passport_reg_type_other_ways_title">Creați un cont MI</string>
-    <string name="passport_reg_using_other_phone">Înregistrare cu un alt număr de telefon</string>
+    <string name="passport_reg_using_other_phone"><u>Utilizați numărul de telefon alternativ</u></string>
     <string name="passport_reg_using_other_phone_number_prompt">Creați un cont nou utilizând </string>
     <string name="passport_reg_using_phone_number_prompt">Creați un cont utilizând numărul de telefon</string>
     <string name="passport_reg_via_sms_alert">Operatorul dumneavoastră vă poate taxa pentru un SMS trimis pentru activarea serviciului.</string>
@@ -675,6 +673,8 @@ link-ul din e-mailul pe care vi l-am trimis."</string>
     <string name="passport_register_by_email"><u>Creați un cont utilizând adresa de e-mail</u></string>
     <string name="passport_register_restricted">Au fost asociate prea multe conturi cu acest număr de telefon; încercați cu un alt număr de telefon</string>
     <string name="passport_register_restricted_title">"Nu se poate utiliza acest număr de telefon"</string>
+    <string name="passport_registered_phone_user_ID">ID utilizator: %s</string>
+    <string name="passport_registered_phone_user_name">Nume utilizator: %s</string>
     <string name="passport_reject_recycle_account">Nu</string>
     <string name="passport_relogin">Conectați-vă din nou</string>
     <string name="passport_relogin_notice">Trebuie să vă conectați din nou</string>
@@ -687,15 +687,22 @@ link-ul din e-mailul pe care vi l-am trimis."</string>
     <string name="passport_restart">Reluați procesul</string>
     <string name="passport_restart_register_prompt">Poate fi necesar un alt mesaj de verificare pentru crearea contului.</string>
     <string name="passport_restart_register_title">Creați un cont Mi</string>
+    <string name="passport_retry">Încercați din nou</string>
+    <string name="passport_select_reg_ways_title">Alte modalități de conectare</string>
     <string name="passport_send_too_many_code">Au fost trimise prea multe coduri de verificare către acest număr. Așteptați 24 ore și reîncercați.</string>
     <string name="passport_setting">Configurare…</string>
-    <string name="passport_sim_index_info">Cartelă SIM %1$d - %2$s</string>
-    <string name="passport_skip_login">Omitere conectare</string>
+    <string name="passport_skip_login">Omiteți</string>
     <string name="passport_skip_register">Omitere creare cont</string>
     <string name="passport_skip_setup_account_msg">Puteți crea ulterior un cont Mi din Setări.</string>
     <string name="passport_skip_setup_account_title">Omitere creare cont</string>
     <string name="passport_title_reg">Creați un cont</string>
-    <string name="passport_trust_device">Am încredere în acest dispozitiv</string>
+    <string name="passport_trust_device">Adăugați acest dispozitiv în lista dispozitivelor verificate</string>
+    <string name="passport_trying_read_verify_code_sms">Se obține codul de verificare…</string>
+    <string name="passport_uplink_reg">Utilizați numărul de telefon</string>
+    <string name="passport_uplink_slot1_reg">Utilizați cartela SIM 1</string>
+    <string name="passport_uplink_slot2_reg">Utilizați cartela SIM 2</string>
+    <string name="passport_use_generated_pwd_message">Asigurați-vă că vă reamintiți parola. O puteți utiliza pentru a vă conecta la celelalte servicii Mi.</string>
+    <string name="passport_use_generated_pwd_title">Reamintiți-vă parola</string>
     <string name="passport_user_agreement">Condiții de utilizare</string>
     <string name="passport_user_agreement_p1">De acord cu </string>
     <string name="passport_user_agreement_p2">Condițiile de utilizare</string>
@@ -703,17 +710,13 @@ link-ul din e-mailul pe care vi l-am trimis."</string>
     <string name="passport_user_agreement_p4">Politica de confidențialitate</string>
     <string name="passport_vcode_notification_title">Verificarea nu este completă</string>
     <string name="passport_vcode_prompt_long">Introduceți codul de verificare</string>
+    <string name="passport_vcode_sms_send_prompt">Trimite codul de verificare la %s</string>
     <string name="passport_verification_failed">Autentificarea a eșuat</string>
     <string name="passport_verify">Verificare</string>
     <string name="passport_wait_for_sms_prompt">"Reluați procesul acum? Mesajul de verificare poate ajunge în cel mult 10 minute dacă sunteți în raza de acoperire a operatorului."</string>
     <string name="passport_wrong_captcha">Codul introdus este incorect</string>
-    <string name="passport_wrong_password">Parola este incorectă</string>
     <string name="passport_wrong_phone_number_format">Formatul numărului de telefon este incorect</string>
     <string name="passport_wrong_vcode">Codul introdus este incorect</string>
-    <string name="passport_xiaomi_account_dspt">Utilizați contul dvs. Mi pentru a vă conecta la Mi Cloud, Magazinul de teme MIUI și la alte servicii Mi, de oriunde v-ați afla.</string>
-    <string name="passport_xiaomi_account_sec_dspt"/>
-    <string name="passport_xiaomi_account_sec_dspt2">Pentru a vă conecta la contul Mi trebuie să aveți o conexiune la internet. În plus, accesul la locație și Mi Cloud vor fi pornite în mod automat.</string>
-    <string name="passport_xiaomi_account_sec_dspt2_vip">Pentru a vă conecta la contul Mi trebuie să aveți o conexiune la internet. În plus, accesul la locație, Mi Cloud și Mi VIP vor fi pornite în mod automat.</string>
     <string name="place_frame">"Locație: "</string>
     <string name="play_in_phone">Rulați pe telefon</string>
     <string name="play_on_tv">Rulează la TV</string>
@@ -781,7 +784,7 @@ link-ul din e-mailul pe care vi l-am trimis."</string>
     <string name="repeat_diagnosis">Testați din nou</string>
     <string name="report_problem">Raportați probleme</string>
     <string name="require_login">Autentificați-vă mai întâi</string>
-  <string name="rescan">Căutați din nou</string>
+    <string name="rescan">Căutați din nou</string>
     <string name="reset">Restabilire</string>
     <string name="respond">Funcționează</string>
     <string name="retry_for_more">Apăsați pentru a vedea detalii</string>
