--- a/Romanian/main/Browser.apk/res/values-ro/strings.xml
+++ b/Romanian/main/Browser.apk/res/values-ro/strings.xml
@@ -162,6 +162,7 @@
     <string name="color_picker_hue">Nuanță</string>
     <string name="color_picker_saturation">Saturaţie</string>
     <string name="comment_app_menu">Comentariu</string>
+    <string name="comment_hint">Comentariu</string>
     <string name="comment_menu">Comentariu</string>
     <string name="common_use_phrase_bottom_bar_cn_txt">.cn</string>
     <string name="common_use_phrase_bottom_bar_com_txt">.com</string>
@@ -184,6 +185,7 @@
     <string name="contextmenu_openlink">Deschideţi</string>
     <string name="contextmenu_openlink_newwindow">Deschideţi într-o filă nouă</string>
     <string name="contextmenu_openlink_newwindow_background">Deschideţi într-o filă în fundal</string>
+    <string name="contextmenu_recognise_qr_code">Recunoaștere cod QR</string>
     <string name="contextmenu_savelink">Salvaţi linkul</string>
     <string name="contextmenu_send_mail">Trimiteţi un e-mail</string>
     <string name="contextmenu_set_wallpaper">Setaţi ca imagine de fundal</string>
@@ -549,6 +551,7 @@ Părăsiţi această pagină?"</string>
     <string name="pref_notifications_receive">Notificări</string>
     <string name="pref_notifications_title">Notificări</string>
     <string name="pref_other_title">Altele</string>
+    <string name="pref_paper_mode_title">Mod Lectură</string>
     <string name="pref_privacy_clear_cache">Goliţi memoria cache</string>
     <string name="pref_privacy_clear_cache_dlg">Ştergeţi conţinutul stocat în memoria cache la nivel local şi bazele de date?</string>
     <string name="pref_privacy_clear_cache_summary">Ştergeţi conţinutul din memoria cache şi bazele de date</string>
