--- a/Romanian/main/BugReport.apk/res/values-ro/strings.xml
+++ b/Romanian/main/BugReport.apk/res/values-ro/strings.xml
@@ -76,7 +76,7 @@
     <string name="feedback_select_images">Adăugați imagini</string>
     <string name="feedback_select_problem">Probleme</string>
     <string name="feedback_select_suggestion">Sugestii</string>
-    <string name="feedback_select_upload_log">Adăugați rapoarte de eoare</string>
+    <string name="feedback_select_upload_log">Adăugați rapoarte de eroare</string>
     <string name="feedback_status_answered">Răspuns</string>
     <string name="feedback_status_change_notification_title">"Progresul raportului dumneavoastră a fost actualizat"</string>
     <string name="feedback_status_commit_failed_title">"Nu s-a putut trimite raportul"</string>
@@ -269,9 +269,11 @@
     <string name="toast_feedback_submitting">Trimitere…</string>
     <string name="toast_feedbackservice_in_submit">Manipulare feedback precedent…</string>
     <string name="toast_fill_brackets">Din raportul dvs. lipsesc câteva informaţii</string>
+    <string name="toast_log_not_exists">"Jurnalul solicitat a fost șters sau nu există"</string>
     <string name="toast_module_required">Selectați elementul</string>
     <string name="toast_network_unavailable">Nu s-a putut trimite raportul. Nu se poate conecta la rețea.</string>
     <string name="toast_pending_log_collection">Colectare jurnale…</string>
+    <string name="toast_pic_not_exists">Imaginea a fost ștearsă din memoria cache</string>
     <string name="toast_post_deleted">"Acest subiect nu există, a fost șters sau editat."</string>
     <string name="toast_problem_class_required">Selectați categoria</string>
     <string name="toast_report_copied_to_clipboard">Raportul a fost copiat în clipboard</string>
