--- a/Romanian/main/FileExplorer.apk/res/values-ro/strings.xml
+++ b/Romanian/main/FileExplorer.apk/res/values-ro/strings.xml
@@ -51,6 +51,7 @@
     <string name="bind_phone_failed_tip">"Nu s-a putut adăuga numărul de telefon"</string>
     <string name="bind_phone_success_tip">Numărul de telefon a fost adăugat cu succes</string>
     <string name="bind_success_tip">Adăugat cu succes</string>
+    <string name="black_list">"Sunteți blocat. Postați feedback-ul dumneavoastră pe forumul MIUI pentru a afla de ce."</string>
     <string name="byteShort">B</string>
     <string name="can_not_send_with_too_many">Nu se pot trimite aşa multe elemente odată</string>
     <string name="cancel">Anulaţi</string>
@@ -224,6 +225,9 @@
     <string name="full_gems">Valorificați bijuteriile</string>
     <string name="gbk_summary">Codare prestabilită în Chineză Simplificată Windows</string>
     <string name="gbk_title">GBK</string>
+    <string name="gender_choose_sub_tile">Obțineți conținut personalizat​</string>
+    <string name="gender_choose_sub_title">Primiți recomandări utile</string>
+    <string name="gender_choose_tip">Selectați sexul dumneavoastră</string>
     <string name="get_user_info_err">"Nu s-au putut obține informații despre această persoană"</string>
     <string name="get_verification_code_fail">"Nu s-a putut obține codul de verificare"</string>
     <string name="gigabyteShort">GB</string>
@@ -231,6 +235,7 @@
     <string name="group_title_extra_backup">Copii de rezervă</string>
     <string name="group_title_extra_expire">Expiră în curând</string>
     <string name="group_title_extra_new">Nou</string>
+    <string name="handsome_boy">Masculin</string>
     <string name="has_installed">Instalată</string>
     <string name="homepage_tab_category">Categorii</string>
     <string name="homepage_tab_file_view">Stocare</string>
@@ -413,6 +418,11 @@
     <string name="partial_cancel_successful">"Nu s-au putut elimina unele fișiere. Restul au fost mutate în %s."</string>
     <string name="partial_delete_failure">"Nu s-au putut șterge unele fișiere; reîncercați"</string>
     <string name="partial_encrypt_success">"Nu s-au putut ascunde unele fișiere; reîncercați"</string>
+    <string name="path_download">Gestionați descărcările</string>
+    <string name="path_hot_sticker">Stickere populare</string>
+    <string name="path_hot_video">Vedeți videoclipuri populare în mod gratuit</string>
+    <string name="path_kuai_chuan">Transferuri de fișiere între dispozitive</string>
+    <string name="path_recent_file">Gestionați fișierele de pe telefon</string>
     <string name="petabyteShort">PB</string>
     <string name="phone">Telefon</string>
     <string name="phone_bind_skip">Omiteți</string>
@@ -450,6 +460,7 @@
     <string name="popup_msg_wb">Vă place videoclipul? Partajați-l prietenilor de pe Weibo!</string>
     <string name="popup_msg_wx">Partajați acest videoclip prietenilor din WeChat.</string>
     <string name="port_range">Portul trebuie să fie cuprins între 1024 şi 65535</string>
+    <string name="pretty_girl">Feminin</string>
     <string name="private_files">Ascunse</string>
     <string name="private_folder">Dosare ascunse</string>
     <string name="private_folder_no_file_hints">Apăsați și țineți apăsat un fișier sau un dosar pentru a-l ascunde.</string>
@@ -497,6 +508,7 @@
     <string name="search_app">Aplicații și dosare</string>
     <string name="search_app_more">Mai multe</string>
     <string name="search_description">Căutați toate fișierele din telefon</string>
+    <string name="search_download">Descărcări;Descărcări recente</string>
     <string name="search_empty_view_hint">Niciun rezultat</string>
     <string name="search_error_hint">Căutați</string>
     <string name="search_file_type_apk">Apk</string>
@@ -505,7 +517,11 @@
     <string name="search_file_type_picture">Fotografii</string>
     <string name="search_file_type_video">Videoclipuri</string>
     <string name="search_hint">Căutare</string>
+    <string name="search_hot_sticker">Stickere; Descărcați stickere</string>
+    <string name="search_hot_video">Videoclipuri populare;Încărcați videoclipuri;Încărcați un videoclip;Videoclip scurt;Videoclipuri scurte;Videoclip mic;Videoclipuri mici</string>
     <string name="search_keyword">Etichete</string>
+    <string name="search_kuai_chuan">Mi Drop;Transfer</string>
+    <string name="search_recent_file">Explorator fișiere;Explorator;Fișier;Fișiere;Gestionați fișierele;Gestionare fișiere</string>
     <string name="search_result">Rezultate</string>
     <string name="search_result_more">Mai multe</string>
     <string name="search_title">Căutare</string>
